fixed spacing in navbar buttons

--- a/client/app/components/(notes)/styles.css
+++ b/client/app/components/(notes)/styles.css
@@ -85,7 +85,7 @@
 
 .modalBackdrop {
   width: 100%;
-  height: 90vh;
+  height: 100%;
   position: absolute;
   top: 0;
   background-color: rgba(0, 0, 0, 0.295);
