--- a/client/app/components/navbar/styles.css
+++ b/client/app/components/navbar/styles.css
@@ -2,12 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-width: 100%;
+  width: 100%;
   max-height: 4rem;
   background: linear-gradient(
     6deg,
-    rgb(9, 8, 8) 10%,
-    rgb(252, 252, 253) 40%,
+    rgb(9, 8, 8) 1%,
+    rgb(189, 189, 194) 40%,
     gray 100%
   );
   align-items: center;
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-width: 100%;
+  width: 100%;
   max-height: 4rem;
   background: linear-gradient(6deg, black 1%, white 35%, gray 100%);
   align-items: center;
@@ -30,14 +30,14 @@
 .userMenu {
   display: flex;
   justify-content: space-evenly;
-  width: 15rem;
+  width: 12rem;
 }
 
 /* CSS */
 .button-89 {
   --b: 1px; /* border thickness */
   --s: 0.45em; /* size of the corner */
-  --color: #373b44;
+  --color: black;
 
   padding: calc(0.5em + var(--s)) calc(0.9em + var(--s));
   color: var(--color);
